--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Eluvio Video Editor</title>
+  <script type="text/javascript" src="./configuration.js"></script>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
 </head>
   <body>
