Make video filter optional ; Allow selection of non-videos

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Eluvio Video Editor</title>
+  <title>Eluvio Timeline Editor</title>
   <script type="text/javascript" src="./configuration.js"></script>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
 </head>
