--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <title>Eluvio Video Editor</title>
   <script type="text/javascript" src="./configuration.js"></script>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Inter:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
   <body>
     <div id="app" class="app"></div>
